#7 datastructure for file meta data added #3 extract navigation and nodelist function